--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,12 @@ name = "txt-cluster"
 version = "0.1.0"
 authors = ["eulegang <eulegang@gmail.com>"]
 edition = "2018"
+description = "unix tool for text clustering"
+license = "MIT"
+readme = "README.md"
+repository = "https://github.com/eulegang/txt-cluster"
+keywords = [ "text", "similarity", "cluster" ]
+categories = [ "command-line-utilities", "text-processing" ]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
